add trajectory request monitoring
